# ad

./: Cargo.toml  account_ids  build.sh
crates/accounts/: Cargo.toml
crates/accounts/src/: main.rs
crates/contract/: Cargo.toml
crates/contract/src/: lib.rs
crates/send/: Cargo.toml
crates/send/src/: main.rs
res/: ad_token.wasm
src/: main.rs
