[package]
name = "ad-send"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
dotenv.workspace = true
near-workspaces.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tryhard.workspace = true
